--- a/api-manage/static/7.md
+++ b/api-manage/static/7.md
@@ -1,7 +1,7 @@
-### 7. **点击跳转**
+### 6. **展示成功上报**
 
-#### GET请求URL：https://superads-sdk-gateway.superadsprod.net/api/tracking/click?pbu=xxxxx
+#### GET请求URL：https://superads-sdk-gateway.superadsprod.net/api/tracking/impression?pbu=xxxxx
 #### 请求http headers：空
 #### 请求http body：空
 #### 返回200 OK
-#### pbu是get_xxx广告请求返回里面的eventsUrls->click得到
+#### pbu是get_xxx广告请求返回里面的eventsUrls->impression得到
